syntax="proto3";
import "commons/location.proto";
import "google/protobuf/timestamp.proto";
package commons;

message ResponseUser {
  bytes id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string user_name = 5;
  repeated string phone_numbers = 6;
  repeated Address addresses = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}
message BasicResponseUser{
  bytes id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  bool enabled = 5;
  optional google.protobuf.Timestamp deleted_at = 6;
}
message CreateUser{
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
}